--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,6 +1,7 @@
 <h1>タスク番号 <%= @task.id %> の詳細ページ</h1>
 
-<p><%= @task.content %></p>
+<p> タスク: <%= @task.content %></p>
+<p> ステータス: <%= @task.status %></p>
 
 <%= link_to '一覧に戻る', tasks_path %>
 <%= link_to 'このタスクを変更する', edit_task_path(@task) %>
