--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,12 +1,27 @@
-<%= form_for(task) do |f| %>
-  <p>
-    <%= f.label :content, "タスク:"%>
-    <%= f.text_field :content %>
-  </p>
+<div class="row">
+  <div class="col-xs-12 col-sm-offset2 col-sm-8 col-md-offset2 col-md-8 col-lg-offset-3 col-lg-6">
+    <%= form_for(task) do |f| %>
+      <% if task.errors.any? %>
+        <div id="error_explanation">
+          <ul>
+            <% task.errors.full_messages.each do |task| %>
+              <li><%= task %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
 
-  <p>
-    <%= f.label :status, "ステータス:" %>
-    <%= f.text_field :status %>
-    <%= f.submit "投稿" %>
-  </p>
-<% end %>
+      <div class="form-group">
+        <%= f.label :content, 'タスク' %>
+        <%= f.text_field :content, class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :status, 'ステータス' %>
+        <%= f.text_field :status, class: 'form-control' %>
+      </div>
+
+      <%= f.submit '投稿', class: 'btn btn-primary' %>
+    <% end %>
+  </div>
+</div>
