--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,10 +1,18 @@
 <% if logged_in? %>
-  <p>ログイン完了ユーザ: <%= current_user.name %></p>
+  
+  <div class="row">
+    <div class="col-xs-12">
+      <%= render 'tasks/tasks', tasks: @tasks, user: @user %>
+      <%= link_to "新規タスク", new_task_path, class: "btn btn-primary" %>
+    </div>
+  </div>
 <% else %>
+
   <div class="center jumbotron">
     <div class="text-center">
       <h1>Welcome to the Microposts</h1>
       <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
     </div>
   </div>
+  
 <% end %>
