--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -10,10 +10,11 @@
           <%= link_to user.name, user_path(user) %> <span class="text-muted">posted at <%= task.created_at %></span>
         </div>
         <div>
-          <p><%= task.content %></p>
+          <p><%= task.content %> : <%= task.status %></p>
         </div>
         <div>
           <% if current_user == task.user %>
+            <%= link_to "Edit", edit_task_path(task), class:"btn btn-primary btn-xs" %>
             <%= link_to "Delete", task, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-xs' %>
           <% end %>
         </div>
